--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <script>
-var I = (your name);
+var I = localStorage.getItem("I");
   document.getElementById('youName').innerHTML = I;
-var W = (your wifs name);
+var W = localStorage.getItem("W");
   document.getElementById('wifeName').innerHTML = W;
-var K1 = (first kids name);
+var K1 = localStorage.getItem("K1");
   ducumant.getElementById('kid1Name').innerHTML = K1;
-var K2 = (seconed kids name);
+var K2 = localStorage.getItem("K2");
   document.getElementById('kid2Name').innerHTML = K2;
-var K3 = (third kids name);
+var K3 = localStorage.getItem("K3");
   document.getElementById('kid3Name').innerHTML = K3;
-var job = (Banker,Carpenter,Farmer,Poverty);
+var job = localStorage.getItem("job");
   document.getElementById('job').innerHTML = job
-var money = ([num}cash);
+var money = localStorage.getItem("money");
   document.getElementById('money').innerHTML = money;
-var Oxen = ([num}ox);
+var Oxen = localStorage.getItem("Oxen");
   document.getElementById('Oxen').innerHTML = Oxen;
-var Foodlb = (([num}food)lb);
+var Foodlb = localStorage.getItem("Foodlb");
   document.getElementById('Foodlb').innerHTML = Foodlb;
-var Clothing = ([num}sets-clothing);
+var Clothing = localStorage.getItem("Clothing");
   document.getElementById('Clothing').innerHTML = Clothing;
-var Amo = ([num}amunition);
-  document.getElementById('Amo').innerHTML = Amo;
-var Axel = {([num}axel}spare-part);
-  document.getElementById('Axel').innerHTML = Axel;
-var Toungue = {([num}toung}spare-part);
-  document.getElementById('Tongue').innerHTML = Toungue;
-var Wheel = {([num}wheel}spare-part);
-  document.getElementById('Wheel').innerHTML = Wheel;
+var Ammo = localStorage.getItem("Ammo");
+  document.getElementById('Ammo').innerHTML = Ammo;
+var Axels = localStorage.getItem("Axels");
+  document.getElementById('Axels').innerHTML = Axels;
+var Toungues = localStorage.getItem("Toungues");
+  document.getElementById('Tongues').innerHTML = Toungues;
+var Wheels = localStorage.getItem("Wheels");
+  document.getElementById('Wheels').innerHTML = Wheels;
 var Day = (1-31/1-30/1-28);
   document.getElementById('Day').innerHTML = Day;
 var Month = (January,February,March,April,May,June,July,August,September,October,November,December);
