--- a/Gregames/OregonTrail/Segment-Shop.html
+++ b/Gregames/OregonTrail/Segment-Shop.html
@@ -7,7 +7,7 @@
 <button onclick="buyToungue();">6</button> Wagon_Toungue<br>
 <button onclick="buyWheel();">7</button> Wagon_Wheel<br>
 <input type="text" size="10" id="box"><br>
-<button>8</button> Leave_Store
+<a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Month"><button>8</button></a> Leave_Store
 <p id="$" style="color:white"></p>
 <script>
 var money = localStorage.getItem("money");
