--- a/Gregames/OregonTrail/Segment-Shop.html
+++ b/Gregames/OregonTrail/Segment-Shop.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><body1 style="color:white"><body2 style="font-size:25px">
-<body7 popover id="Ox"><button onclick="buyOx();">1</button> Oxen</body7><br>
+<button onclick="buyOx();">1</button> Oxen<br>
 <button onclick="buyFood();">2</button> Foodlb<br>
 <button onclick="buyClothing();">3</button> Clothes<br>
 <button onclick="buyAmo();">4</button> Boxes_Of_Amo(20per-box)<br>
