--- a/Gregames/OregonTrail/Segment-Month.html
+++ b/Gregames/OregonTrail/Segment-Month.html
@@ -1,1 +1,34 @@
-
+<!DOCTYPE html><html><body1 style="color:white">
+<button onclick="Febuary();" popovertarget="Continue" popovertargetaction="show">1</button> Febuary<br>
+<button onclick="March();" popovertarget="Continue" popovertargetaction="show">2</button> March<br>
+<button onclick="April();" popovertarget="Continue" popovertargetaction="show">3</button> April<br>
+<button onclick="May();" popovertarget="Continue" popovertargetaction="show">4</button> May<br>
+<button onclick="June();" popovertarget="Continue" popovertargetaction="show">5</button> June<br>
+<button onclick="July();" popovertarget="Continue" popovertargetaction="show">6</button> July<br>
+<button onclick="August();" popovertarget="Continue" popovertargetaction="show">7</button> August<br>
+<body3 popover id="Continue">Press"Space"To_Continue<a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail"><button>Space</buttom></a></body3>
+<script>
+function Febuary() {
+localStorage.setItem("Month", "Febuary");
+}
+function March() {
+localStorage.setItem("Month", "March");
+}
+function April() {
+localStorage.setItem("Month", "April");
+}
+function May() {
+localStorage.setItem("Month", "May");
+}
+function June() {
+localStorage.setItem("Month", "June");
+}
+function July() {
+localStorage.setItem("Month", "July");
+}
+function August() {
+localStorage.setItem("Month", "August");
+}
+</script></body></html><script>
+  document.body.style.background = "black";
+</script>
