--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -28,19 +28,19 @@ var Toungues = localStorage.getItem("Toungues");
   document.getElementById('Tongues').innerHTML = Toungues;
 var Wheels = localStorage.getItem("Wheels");
   document.getElementById('Wheels').innerHTML = Wheels;
-var Day = (1-31/1-30/1-28);
+var Day = localStorage.getItem("Day");
   document.getElementById('Day').innerHTML = Day;
-var Month = (January,February,March,April,May,June,July,August,September,October,November,December);
+var Month = localStorage.getItem("Month");
   document.getElementById('Month').innerHTML = Month;
-var Year = (=>1848);
+var Year = localStorage.getItem("Year");
   document.getElementById('Year').innerHTML = Year;
-var Wheather = (hot,warm,raining,cool,cold,snowing,very-cold);
+var Wheather = localStorage.getItem("Wheather");
   document.getElementById('Wheather').innerHTML = Wheather;
-var Health = (good,fair,poor,very-poor);
+var Health = localStorage.getItem("Health");
   document.getElementById('Health').innerHTML = Health;
-var milesL = ([num}miles-next-landmark);
-  document.getElementById('milesL').innerHTML = milesL;
-var milesD = ([num}total-miles);
+var miles2LM = ([num}miles-next-landmark);
+  document.getElementById('miles2LM').innerHTML = miles2LM;
+var milesD = localStorage.getItem("milesD");
   document.getElementById('milesD').innerHTML = milesD;
 var Pace = (steady,tiring,strenguous,grueling);
   document.getElementById('Pace').innerHTML = Pace;
