--- a/Gregames/OregonTrail/Segment-Month.html
+++ b/Gregames/OregonTrail/Segment-Month.html
@@ -48,6 +48,10 @@ localStorage.setItem("Day", 1);
 localStorage.setItem("Health", "Good");
 localStorage.setItem("milesD", 0);
 localStorage.setItem("Year", 1848);
+localStorage.setItem("Pace", "steady");
+localStorage.setItem("hr", 8);
+localStorage.setItem("Rations", "filling");
+localStorage.setItem("FPD", 1);
 }
 </script></body2></body1></html><script>
   document.body.style.background = "black";
