--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -42,12 +42,12 @@ var miles2LM = ([num}miles-next-landmark);
   document.getElementById('miles2LM').innerHTML = miles2LM;
 var milesD = localStorage.getItem("milesD");
   document.getElementById('milesD').innerHTML = milesD;
-var Pace = (steady,tiring,strenguous,grueling);
+var Pace = localStorage.getItem("Pace");
   document.getElementById('Pace').innerHTML = Pace;
-var hr = ([8,12,16,20}hrs-per-day);
+var hr = localStorage.getItem("hr");
   document.getElementById('hr').innerHTML = hr;
-var Rations = (filling,meager,bare-bones);
+var Rations = localStorage.getItem("Rations");
   document.getElementById('Rations').innerHTML = Rations;
-var FPD = ([3,2,1}lb-food-per-day);
+var FPD = localStorage.getItem("FPD");
   document.getElementById('FPD').innerHTML = FPD;
 </script>
