--- a/Gregames/OregonTrail/Segment-Month.html
+++ b/Gregames/OregonTrail/Segment-Month.html
@@ -9,37 +9,37 @@
 <body3 popover id="Continue">Press"Space"To_Continue<a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail"><button>Space</buttom></a></body3>
 <script>
 function Febuary() {
-localStorage.setItem("Month", "Febuary");
+localStorage.setItem("Month", "2");
 localStorage.setItem("Wheather", "cool");
 Setup();
 }
 function March() {
-localStorage.setItem("Month", "March");
+localStorage.setItem("Month", "3");
 localStorage.setItem("Wheather", "cold");
 Setup();
 }
 function April() {
-localStorage.setItem("Month", "April");
+localStorage.setItem("Month", "4");
 localStorage.setItem("Wheather", "cool");
 Setup();
 }
 function May() {
-localStorage.setItem("Month", "May");
+localStorage.setItem("Month", "5");
 localStorage.setItem("Wheather", "warm");
 Setup();
 }
 function June() {
-localStorage.setItem("Month", "June");
+localStorage.setItem("Month", "6");
 localStorage.setItem("Wheather", "rainy");
 Setup();
 }
 function July() {
-localStorage.setItem("Month", "July");
+localStorage.setItem("Month", "7");
 localStorage.setItem("Wheather", "hot");
 Setup();
 }
 function August() {
-localStorage.setItem("Month", "August");
+localStorage.setItem("Month", "8");
 localStorage.setItem("Wheather", "cool");
 Setup();
 }
