--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -53,29 +53,58 @@ var Rations = localStorage.getItem("Rations");
   document.getElementById('Rations').innerHTML = Rations;
 var FPD = localStorage.getItem("FPD");
   document.getElementById('FPD').innerHTML = FPD;
-function run() {
+loops.everyInterval(24000, function Day() {
+  if (Pace == "stoped") {
+    if (FPD == 3) {
+      HealthNum += 4;
+      } else if (FPD == 2) {
+        HealthNum += 6;
+      } else if (FPD == 1) {
+        HealthNum += 10;
+      }
+    var hr = 0;
+  } else if (Pace == "steady") {
+    HealthNum += -2;
+    var hr = 8;
+  } else if (Pace == "tiring") {
+    HealthNum += -5;
+    var hr = 12;
+  } else if (Pace == "strenguous") {
+    HealthNum += -15;
+    var hr = 16;
+  } else if (Pace == "grueling") {
+    HealthNum += -25;
+    var hr = 20;
+  }
+  if (FPD == 3) {
+    HealthNum += 1;
+  } else if (FPD == 2) {
+    HealthNum += -5;
+  } else if (FPD == 1) {
+    HealthNum += -10;
+  }
   milesD += hr * 2;
   localStorage.setItem("milesD", milesD);
   miles2LM += hr * -2;
   localStorage.setItem("miles2LM", miles2LM);
   Day += 1;
   localStorage.setItem("Day", Day);
-  if (Day = "28") {
-    if (Month = 2) {
+  if (Day == "28") {
+    if (Month == 2) {
       var Day = 1;
       localStorage.setItem("Day", 1);
       Month += 1;
       localStorage.setItem("Month", Month);
     }
-  } else if (Day = 30) {
-    if ((Month = 4||Month = 6)||(Month = 9||Month = 11)) {
+  } else if (Day == 30) {
+    if ((Month == 4||Month == 6)||(Month == 9||Month == 11)) {
       var Day = 1;
       localStorage.setItem("Day", 1);
       Month += 1;
       localStorage.setItem("Month", Month);
     } 
-  } else if (Day = 31) {
-    if ((Month = 1||Month = 3)||((Momth = 5||Month = 7)||(Month = 8||Month = 10))) {
+  } else if (Day == 31) {
+    if ((Month == 1||Month == 3)||((Momth == 5||Month == 7)||(Month == 8||Month == 10))) {
       var Day = 1;
       localStorage.setItem("Day", 1);
       Month += 1;
@@ -86,8 +115,120 @@ function run() {
       var Month = 1;
       localStorage.setItem("Month", Month);
     }
+    if (Month = 1||Month = 2) {
+    var Randomizer = randint(1, 3);
+    if (Randomizer = 1) {
+      var Wheather = "snowy";
+    } else if (Randomizer = 2) {
+      var Wheather = "very-cold";
+    } else if (Randomizer = 3) {
+      var Wheather = "cold";
+    }
+  } else if (Month = 3||Month = 4) {
+    var Randomizer = randint(1, 4);
+    if (Randomizer = 1) {
+      var Wheather = "cold";
+    } else if (Randomizer = 2) {
+      var Wheather = "cool";
+    } else if (Randomizer = 3) {
+      var Wheather = "rainy";
+    } else if (Randomizer = 4) {
+      var Wheather = "warm";
+    }
+  } else if (Month = 5||Month = 6) {
+    var Randomizer = randint(1, 3);
+    if (Randomizer = 1) {
+      var Wheather = "rainy";
+    } else if (Randomizer = 2) {
+      var Wheather = "warm";
+    } else if (Randomizer = 3) {
+      var Wheather = "hot";
+    }
+  } else if (Month = 7||Month = 8) {
+    var Randomizer = randint(1, 5);
+    if (Randomizer = 1) {
+      var Wheather = "hot";
+    } else if (Randomizer = 2) {
+      var Wheather = "hot";
+    } else if (Randomizer = 3) {
+      var Wheather = "warm";
+    } else if (Randomizer = 4) {
+      var Wheather = "warm";
+    } else if (Randomizer = 5) {
+      var Wheather = "cool";
+    }
+  } else if (Month = 9||Month = 10) {
+    var Randomizer = randint(1, 3);
+    if (Randomizer = 1) {
+      var Wheather = "cold";
+    } else if (Randomizer = 2) {
+      var Wheather = "cool";
+    } else if (Randomizer = 3) {
+      var Wheather = "warm";
+    }
+  } else if (Month = 11||Month = 12) {
+    var Randomizer = randint(1, 3);
+    if (Randomizer = 1) {
+      var Wheather = "cold";
+    } else if (Randomizer = 2) {
+      var Wheather = "very-cold";
+    } else if (Randomizer = 3) {
+      var Wheather = "snowy";
+    }
   }
-}
+  localStorage.setItem("Wheather", Wheather);
+  if (Wheather = "cold" && Clothing < 5) {
+    HealthNum += Clothing - 5;
+  } else if (Wheather = "very-cold" && Clothing < 10) {
+    HealthNum += Clothing - 10;
+  } else if (Wheather = "snowy" && Math.percentChance(25)) {
+    var Pace = "stoped";
+    Day();
+    alert("Bliserd Lose 1 Day");
+  } else if (Wheather = "rainy" && Math.percentChance(25)) {
+    var Pace = "stoped";
+    Day();
+    alert("Thunderstorm Lose 1 Day");
+  }
+  if (Math.percentChance(25)) {
+    var Randomizer = randint(1, 3);
+    if (Randomizer = 2) {
+      aler("Ox Wondered Of Lose 2 Days");
+    } else if (Randomizer = 1) {
+      alert("Someone Wandered Of Lose 1 Day");
+    } else if (Randomizer = 3) {
+      var Randomiser = randint(1, 8);
+      alert("Impassable Tail Lose "Randomizer" Days");
+    }
+    for(var loop = 0; loop < Randomizer; loop++) {
+      Day();
+    }
+  }
+  if (Math.percentChance(5)) {
+    var Randomizer = randint(1, 3)
+    if (Randomizer = 1) {
+      for(var loop = 0; loop < 1; loop++) {
+      if (confirm("Your Wagon Wheel Broke. Would You Like To Fix It?")) {
+        Wheel += -1
+      } else {
+        
+      }
+        
+  localStorage.setItem("HealthNum", HealthNum);
+  if (HealthNum > 400) {
+    var Health = "good";
+    if (HelathNum < 500) {
+      var Health = "fair";
+      if (HealthNum < 300) {
+        var Health = "poor";
+        if (HealthNum < 200) {
+          var Health = "very-poor";
+        }
+      }
+    }
+  }
+  localStorage.setItem("Health", Health);
+})
 </script></body1></html><script>
   document.body.style.background = "black";
 </script>
