--- a/Gregames/OregonTrail/Segment-Month.html
+++ b/Gregames/OregonTrail/Segment-Month.html
@@ -52,6 +52,17 @@ localStorage.setItem("Pace", "steady");
 localStorage.setItem("hr", 8);
 localStorage.setItem("Rations", "filling");
 localStorage.setItem("FPD", 1);
+localStorage.setItem("HealthNum", 500);
+localStorage.setItem("Isick", false);
+localStorage.setItem("Idied", false);
+localStorage.setItem("Wsick", false);
+localStorage.setItem("Wdied", false);
+localStorage.setItem("K1sick", false);
+localStorage.setItem("K1died", false);
+localStorage.setItem("K2sick", false);
+localStorage.setItem("K2died", false);
+localStorage.setItem("K3sick", false);
+localStorage.setItem("K3died", false);
 }
 </script></body2></body1></html><script>
   document.body.style.background = "black";
