--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -299,8 +299,188 @@ function Day() {
       var Health = "fair";
       if (HealthNum < 300) {
         var Health = "poor";
+        if (Math.percentChance(50)) {
+          if (K3sick) {
+            if (K3died) {
+              if (K2sick) {
+                if (K2died) {
+                  if (K1sick) {
+                    if (K1died) {
+                      if (Wsick) {
+                        if (Wdied) {
+                          if (Isick) {
+                            localStorage.setItem("Idied", true);
+                            window.location.assing("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/YourDead");
+                          } else {
+                            var Randomizer = randint(1, );
+                            if (Randomizer = 1) {
+                              alert(I"_Got_A_Snakebite");
+                            } else if (Randomizer = 2) {
+                              alert(I"_Has_Disentary");
+                            } else if (Randomizer = 3) {
+                              alert(I"_Broke_Their_Arm");
+                            } else if (Randomizer = 4) {
+                              alert(I"_Broke_Their_Leg");
+                           }
+                            var Isick = true;
+                          }
+                        } else {
+                          alert(W"_Died");
+                          var Wdied = true;
+                      } else {
+                        var Randomizer = randint(1, );
+                        if (Randomizer = 1) {
+                          alert(W"_Got_A_Snakebite");
+                        } else if (Randomizer = 2) {
+                          alert(W"_Has_Disentary");
+                        } else if (Randomizer = 3) {
+                          alert(W"_Broke_Their_Arm");
+                        } else if (Randomizer = 4) {
+                          alert(W"_Broke_Their_Leg");
+                       }
+                        var Wsick = true;
+                      }
+                    } else {
+                    alert(K1"_Died");
+                    var K1died = true;
+                  } else {
+                    var Randomizer = randint(1, );
+                    if (Randomizer = 1) {
+                      alert(K1"_Got_A_Snakebite");
+                    } else if (Randomizer = 2) {
+                      alert(K1"_Has_Disentary");
+                    } else if (Randomizer = 3) {
+                      alert(K1"_Broke_Their_Arm");
+                    } else if (Randomizer = 4) {
+                      alert(K1"_Broke_Their_Leg");
+                    }
+                    var K1sick = true;
+                  }
+                } else {
+                  alert(K2"_Died");
+                  var K2died = true;
+              } else {
+                var Randomizer = randint(1, );
+                if (Randomizer = 1) {
+                  alert(K2"_Got_A_Snakebite");
+                } else if (Randomizer = 2) {
+                  alert(K2"_Has_Disentary");
+                } else if (Randomizer = 3) {
+                  alert(K2"_Broke_Their_Arm");
+                } else if (Randomizer = 4) {
+                  alert(K2"_Broke_Their_Leg");
+                }
+                var K2sick = true;
+              }
+            } else {
+              alert(K3"_Died");
+              var K3died = true;
+          } else {
+            var Randomizer = randint(1, );
+            if (Randomizer = 1) {
+              alert(K3"_Got_A_Snakebite");
+            } else if (Randomizer = 2) {
+              alert(K3"_Has_Disentary");
+            } else if (Randomizer = 3) {
+              alert(K3"_Broke_Their_Arm");
+            } else if (Randomizer = 4) {
+              alert(K3"_Broke_Their_Leg");
+            }
+            var K3sick = true;
+          }
+        }
         if (HealthNum < 200) {
           var Health = "very-poor";
+          if (Math.percentChance(75)) {
+          if (K3sick) {
+            if (K3died) {
+              if (K2sick) {
+                if (K2died) {
+                  if (K1sick) {
+                    if (K1died) {
+                      if (Wsick) {
+                        if (Wdied) {
+                          if (Isick) {
+                            localStorage.setItem("Idied", true);
+                            window.location.assing("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/YourDead");
+                          } else {
+                            var Randomizer = randint(1, );
+                            if (Randomizer = 1) {
+                              alert(I"_Got_A_Snakebite");
+                            } else if (Randomizer = 2) {
+                              alert(I"_Has_Disentary");
+                            } else if (Randomizer = 3) {
+                              alert(I"_Broke_Their_Arm");
+                            } else if (Randomizer = 4) {
+                              alert(I"_Broke_Their_Leg");
+                           }
+                            var Isick = true;
+                          }
+                        } else {
+                          alert(W"_Died");
+                          var Wdied = true;
+                      } else {
+                        var Randomizer = randint(1, );
+                        if (Randomizer = 1) {
+                          alert(W"_Got_A_Snakebite");
+                        } else if (Randomizer = 2) {
+                          alert(W"_Has_Disentary");
+                        } else if (Randomizer = 3) {
+                          alert(W"_Broke_Their_Arm");
+                        } else if (Randomizer = 4) {
+                          alert(W"_Broke_Their_Leg");
+                       }
+                        var Wsick = true;
+                      }
+                    } else {
+                    alert(K1"_Died");
+                    var K1died = true;
+                  } else {
+                    var Randomizer = randint(1, );
+                    if (Randomizer = 1) {
+                      alert(K1"_Got_A_Snakebite");
+                    } else if (Randomizer = 2) {
+                      alert(K1"_Has_Disentary");
+                    } else if (Randomizer = 3) {
+                      alert(K1"_Broke_Their_Arm");
+                    } else if (Randomizer = 4) {
+                      alert(K1"_Broke_Their_Leg");
+                    }
+                    var K1sick = true;
+                  }
+                } else {
+                  alert(K2"_Died");
+                  var K2died = true;
+              } else {
+                var Randomizer = randint(1, );
+                if (Randomizer = 1) {
+                  alert(K2"_Got_A_Snakebite");
+                } else if (Randomizer = 2) {
+                  alert(K2"_Has_Disentary");
+                } else if (Randomizer = 3) {
+                  alert(K2"_Broke_Their_Arm");
+                } else if (Randomizer = 4) {
+                  alert(K2"_Broke_Their_Leg");
+                }
+                var K2sick = true;
+              }
+            } else {
+              alert(K3"_Died");
+              var K3died = true;
+          } else {
+            var Randomizer = randint(1, );
+            if (Randomizer = 1) {
+              alert(K3"_Got_A_Snakebite");
+            } else if (Randomizer = 2) {
+              alert(K3"_Has_Disentary");
+            } else if (Randomizer = 3) {
+              alert(K3"_Broke_Their_Arm");
+            } else if (Randomizer = 4) {
+              alert(K3"_Broke_Their_Leg");
+            }
+            var K3sick = true;
+          }
+        }
         }
       }
     }
